--- a/client/src/styles/_nav.scss
+++ b/client/src/styles/_nav.scss
@@ -1,5 +1,5 @@
 .navbar {
-    background: #f1fcfc !important;
+    background: #e2fafa !important;
     box-shadow: 0 3px 8px -2px gray;
 
     .homeLink{
