designed the course list

--- a/client/src/styles/_splash.scss
+++ b/client/src/styles/_splash.scss
@@ -19,6 +19,7 @@
             background-color: #29bd90 !important;
             border: none;
             width: 150px;
+            height: 40px;
         }
     }
 }
